--- a/main.css
+++ b/main.css
@@ -13,11 +13,13 @@
   top: 40%;
 }
 button{
-  border-radius: 100px;
-  margin: 10px;
   width: 80px;
   height: 50px;
+  margin: 10px;
+  border-radius: 100px;
+  border: none;
   outline: none;
+  color: #fff;
 }
 #btn{
   text-align: center;
@@ -34,4 +36,5 @@ button{
 #error{
   display: none;
   font-size: 20px;
+  color: #fff;  
 }
